Fix off-centered images (#635)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -330,6 +330,13 @@ figure figcaption {
   margin-bottom: var(--neo-spacing_5);
 }
 
+.markdown figure {
+  width: fit-content;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .markdown figure img {
   padding: 0;
   background-color: transparent;
